# AIE-DXproject_1_back

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  description.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_data.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  improvement_request.yml
.github/workflows/: ci.yml  deploy.yml  ruff-check.yml
alembic/: env.py
alembic/versions/: 190a9ff60554_merge_heads.py  1f9ed4bcbe87_add_async_processing_columns.py  202410171200_baseline_current_schema.py  4c84b4fb6cbc_refactor_schema_to_match_design.py  5c5f181bb488_fix_model_relationships_and_columns.py  6185d09e3ea8_initial_schema_creation.py  812e498f2dae_rename_columns_for_naming_convention.py  82fd145ae26f_schema_updates.py  a1b2c3d4e5f6_add_not_null_constraints_for_schema.py  b2f3d8e9a7c1_add_analysis_version_fields.py  bfe9176e9925_restore_llm_prefix.py  ca6c48fd97cc_add_uploaded_file_metadata.py
app/: __init__.py  main.py
app/analysis/: __init__.py  aggregation.py  analyzer.py  llm_analyzer.py  safety.py  scoring.py
app/api/: analysis.py  auth.py  comments.py  common.py  courses.py  dashboard.py  lectures.py  metrics.py  trends.py  upload.py
app/core/: __init__.py  middleware.py  settings.py
app/db/: __init__.py  init_db.py  migrations.py  models.py  session.py
app/schemas/: analysis.py  comment.py  course.py
app/services/: __init__.py  categorization.txt  full_analysis.txt  importance.txt  llm_client.py  risk_assessment.txt  sentiment.txt  storage.py  summary.py  upload_pipeline.py
app/workers/: __init__.py  celery_app.py  tasks.py
docs/: api.md  api_definition.md  auth-flow.md  backend_system_design.md  component_guide.md  database.md  dataflow.md  development.md  ruff-usage.md  uv-usage.md
docs/wiki/: Project-Overview.md
infra/: .gitignore  README.md  app.py  cdk.json  requirements.txt
infra/stacks/: __init__.py  (+2 more)
scripts/: export_architecture_docx.py
tests/: conftest.py  run_normalization_tests.py  test_alembic_versions.py  test_api.py  test_api_additions.py  test_api_fixes.py  test_api_new.py  test_core.py  test_dashboard_fix.py  test_db_scripts.py  test_health.py  test_integration_upload_flow.py  test_jobs.py  test_llm_client.py  test_migrations.py  test_new_api.py  test_normalization.py  test_schemas.py  test_services.py  test_settings.py  test_storage.py  test_workers.py
(+8 files in other folders)
