[project]
name = "aie-dxproject-1-back"
version = "0.1.0"
description = "AIE DX Project 1 Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.1",
    "boto3>=1.42.29",
    "celery>=5.6.2",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

# --- Global Settings ---
[tool.ruff]
target-version = "py313"
line-length = 119
exclude = [
    ".venv",
    "alembic/versions",
]

# --- Linter Settings ---
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

# --- Import Sorting (isort) ---
[tool.ruff.lint.isort]
known-first-party = ["app"]  # プロジェクトのトップレベルパッケージ名

# --- Formatter Settings ---
[tool.ruff.format]
quote-style = "double"             # ダブルクオートを使用
skip-magic-trailing-comma = false  # 末尾のカンマを強制的に追加
